ava-rs/tui/src/bottom_pane/snapshots/ava_tui__bottom_pane__experimental_features_view__tests__daemon_auto_start_menu.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Ava server.


› [ ] Automatically start the background server  Use the shared local server for
                                                 new, resumed, and forked
                                                 sessions. Takes effect next
                                                 launch.


  space toggle · enter save · esc save/close
