ava-rs/tui/src/bottom_pane/snapshots/ava_tui__bottom_pane__experimental_features_view__tests__experimental_features_unavailable.snap
---
source: tui/src/bottom_pane/experimental_features_view_tests.rs
expression: buffer_text(&buffer)
---

  Experimental features
  Checked features are configured on. Some experimental features take effect
  only in new tasks or after restarting the Ava server.
  Server experiments unavailable. Reopen /experimental to retry; restart this
  Ava client if requests remain unanswered.


  No experimental features available for now


  space toggle · enter save · esc save/close
